# workflow-orchestration-queue-foxtrot95

./: .ai-repository-summary.md  AGENTS.md  README.md  pyproject.toml  run_opencode_prompt.sh  workflow-orchestration-queue-foxtrot95.code-workspace
.agents/skills/forensic-analysis-report/: SKILL.md
.agents/skills/orchestration-run-analysis/: SKILL.md
.devcontainer/: devcontainer.json
.github/workflows/: orchestrator-agent.yml
.opencode/agents/: planner.md
debrief-and-document/: report.md  trace.md
docs/: implementation-plan.md  local-orchestration-quickstart.md  new_features.md
docs/.archived/: non-idle-failure-forensics.md  pr-approval-merge-plan.md  prompt-refactor-analysis.md
plan_docs/: OS-APOW Architecture Guide v3.2.md  OS-APOW Development Plan v4.2.md  OS-APOW Implementation Specification v1.2.md  architecture.md  interactive-report.html  tech-stack.md
src/orchestrator/: __init__.py  main.py
src/orchestrator/api/: routes.py
src/orchestrator/models/: __init__.py
src/orchestrator/queue/: __init__.py  github_queue.py
src/orchestrator/services/: __init__.py  notifier.py  sentinel.py
test/: test-opencode-run.sh
tests/: conftest.py  test_main.py
